refactor: optimize performance and remove magic numbers